--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -114,7 +114,7 @@ hr {
 .showcase {
   width: 100%;
   height: 550px;
-  background: url("../img/showcase.jpg") no-repeat center center/cover;
+  background: url("/resources/img/showcase.jpg") no-repeat center center/cover;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -187,26 +187,27 @@ hr {
 }
 
 #banner-cards-one {
-  background: url("../img/banner-01.jpg") no-repeat center center/cover;
+  background: url("/resources/img/banner-01.jpg") no-repeat center center/cover;
 }
 
 #banner-cards-two {
-  background: url("../img/banner-02.jpg") no-repeat center center/cover;
+  background: url("/resources/img/banner-02.jpg") no-repeat center center/cover;
 }
 
 
 /* footer */
-.footer-links {
+.footer-container {
   background: var(--bg-secondary-color);
   color: var(--text-primary-color);
   font-size: 12px;
+  margin-top: 50px;
 }
 
 .footer-title {
   padding: 40px 0px 20px 30px;
 }
 
-.footer-container {
+.footer-links {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   gap: 10px;
@@ -214,12 +215,12 @@ hr {
   justify-content: center;
 }
 
-.footer-container p {
+.footer-links p {
   margin: 0 auto;
   padding: 10px 0px;
 }
 
-.footer-container li {
+.footer-links li {
   line-height: 2.4;
 }
 
