improvements on noticia/id & noticias pages

--- a/noticias/noticias.css
+++ b/noticias/noticias.css
@@ -26,18 +26,20 @@
     margin: 10px 0;
     padding: 10px 0;
     color: var(--text-primary-color);
-    text-transform: uppercase;
     display: inline-block;
     font-weight: bold;
+    /*text-transform: uppercase;*/
 }
 
 .news-detail h1 {
     margin: 30px 0px 0px 0px;
-    text-transform: uppercase;
+    /*text-transform: uppercase;*/
 }
 
 .news-detail img {
     margin: 30px 0px 0px 0px;
+    max-width: 600px;
+    max-height: 400px;
     border-radius: 10px;
 }
 
