--- a/noticias/noticias.css
+++ b/noticias/noticias.css
@@ -18,24 +18,27 @@
 .news-item img {
     width: 300px;
     height: 180px;
-    border-radius: 10px;
+    border-radius: 4px;
 }
 
 .news-item a {
     /*display: inline-block;*/
-    color: var(--text-primary-color);
-    margin: 0px 0px;
-    padding: 10px 10px;
-    border: 1px solid var(--text-primary-color);
-    border-radius: 10px;
     /*text-transform: uppercase;*/
+    color: var(--text-secondary-color);
+    background-color: var(--bg-tertiary-color);
+    margin: 0px 0px;
+    padding: 20px 20px;
+    border-radius: 4px;
+    opacity: 0.8;
 }
 
 .news-item a:hover {
-    background-color: var(--bg-secondary-color);
-    opacity: 0.9;
+    color: var(--text-secondary-color);
+    background-color: var(--bg-tertiary-color);
     transform: translate(-2px, -2px);
     box-shadow: 6px 6px 10px black;
+    border: 1px solid var(--text-secondary-color);
+    opacity: 1;
 }
 
 .news-item a h2 {
@@ -64,7 +67,7 @@
     margin: 30px 0px 0px 0px;
     max-width: 600px;
     max-height: 400px;
-    border-radius: 10px;
+    border-radius: 4px;
 }
 
 .news-detail p {
@@ -72,13 +75,20 @@
     font-size: 20px;
 }
 
-/* media queries (responsive) */
+/* media queries */
 @media (max-width: 1024px) {
 
-    .news-list-even,
-    .news-list-odd {
+    .news-item-even,
+    .news-item-odd {
         /*grid-template-columns: 1fr;*/
         flex-direction: column;
     }
+}
 
+@media (max-width: 600px) {
+
+    .news-detail img {
+        width: 100%;
+        /* height: 180px;*/
+    }
 }
