--- a/noticias/noticias.css
+++ b/noticias/noticias.css
@@ -26,6 +26,7 @@
     /*text-transform: uppercase;*/
     color: var(--text-secondary-color);
     background-color: var(--bg-tertiary-color);
+    border: 1px solid var(--text-primary-color);
     margin: 0px 0px;
     padding: 20px 20px;
     border-radius: 4px;
@@ -35,9 +36,9 @@
 .news-item a:hover {
     color: var(--text-secondary-color);
     background-color: var(--bg-tertiary-color);
+    border: 1px solid var(--text-secondary-color);
     transform: translate(-2px, -2px);
     box-shadow: 6px 6px 10px black;
-    border: 1px solid var(--text-secondary-color);
     opacity: 1;
 }
 
@@ -83,12 +84,8 @@
         /*grid-template-columns: 1fr;*/
         flex-direction: column;
     }
-}
-
-@media (max-width: 600px) {
 
     .news-detail img {
         width: 100%;
-        /* height: 180px;*/
     }
 }
