--- a/mapa/mapa.css
+++ b/mapa/mapa.css
@@ -1,18 +1,50 @@
 .card {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  gap: 5px;
   color: var(--text-secondary-color);
   background-color: var(--bg-secondary-color);
-  padding: 20px 30px;
+  padding: 10px 30px;
+}
+
+.card > span {
+  margin: 10px 0px;
 }
 
 .card #stats {
   color: red;
 }
 
+.card button {
+  cursor: pointer;
+  display: inline-block;
+  border: 0;
+  height: 40px;
+  /*font-weight: bold;*/
+  padding: 10px 20px;
+  background: var(--btn-color);
+  color: var(--text-secondary-color);
+  font-size: 15px;
+  border: 1px solid var(--text-secondary-color);
+}
+
 #map {
-  margin: 20px 0px 0px 0px;
+  background-color: grey;
+  margin: 15px 0px 0px 0px;
+  width: 100%;
+  height: 600px;
 }
 
 .source {
   font-size: 12px;
   padding: 10px 0px 0px 0px;
+}
+
+
+/* media queries */
+@media (max-width: 600px) {
+  .card {
+    flex-direction: column;
+  }  
 }
