--- a/hospitales/hospitales.css
+++ b/hospitales/hospitales.css
@@ -1,19 +1,23 @@
 #map {
     background-color: grey;
     margin: 30px 0px 0px 0px;
-    width: 60%;
+    width: 70%;
     height: 500px;
     display: inline-block;
+}
+
+#results {
+
 }
 
 option {
     
 }
 
-.select {
+select {
     cursor: pointer;
     font-size: large;
-    width: 20%;
+    width: 100%;
     display: inline-block;
     height: fit-content;
     margin: 30px 0px 0px 0px;
@@ -23,4 +27,32 @@ option {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+}
+
+@keyframes fadeIn{
+    0% {
+      opacity:0;
+    }
+    100% {
+      opacity:1;
+    }
+}
+
+.fade-in {
+    animation: fadeIn ease 2s;
+}
+
+.hospitalList {
+    margin-top: 10px;
+}
+
+.listElement {
+    margin-bottom: 10px;
+    cursor: pointer;
+}
+
+#listResults {
+    overflow-y: auto;
+    margin-top: 15px;
+    max-height: 407px;
 }
