--- a/home/index.css
+++ b/home/index.css
@@ -1,14 +1,15 @@
 /* showcase */
 .showcase {
   width: 100%;
-  height: 550px;
+  height: 500px;
+  background: var(--bg-secondary-color);
   background: url("../resources/img/showcase.jpg") no-repeat center center/cover;
   display: flex;
   flex-direction: column;
   align-items: center;
   text-align: center;
   justify-content: flex-end;
-  padding-bottom: 50px;
+  padding: 0px 30px 30px 30px;
   margin-bottom: 20px;
   color: var(--text-secondary-color);
   border: 1px solid var(--text-primary-color);
