--- a/nosotros/nosotros.css
+++ b/nosotros/nosotros.css
@@ -45,3 +45,20 @@
 .card .position {
     font-size: 12px;
 }
+
+
+/* media queries */
+@media (max-width: 1024px) {
+
+    .members {
+      grid-template-columns: repeat(3, 1fr);
+    }
+  }
+  
+  @media (max-width: 600px) {
+  
+    .members {
+      grid-template-columns: repeat(2, 1fr);
+    }
+  }
+  
