--- a/mapa/mapa.css
+++ b/mapa/mapa.css
@@ -2,7 +2,8 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  gap: 5px;
+  gap: 20px;
+  flex: 1;
   color: var(--text-secondary-color);
   background-color: var(--bg-secondary-color);
   padding: 10px 30px;
@@ -10,9 +11,10 @@
 
 .card > span {
   margin: 10px 0px;
+  margin-right: auto;
 }
 
-.card #stats {
+.card > span #stats {
   color: red;
 }
 
@@ -21,7 +23,6 @@
   display: inline-block;
   border: 0;
   height: 40px;
-  /*font-weight: bold;*/
   padding: 10px 20px;
   background: var(--btn-color);
   color: var(--text-secondary-color);
