--- a/prevencion/prevencion.css
+++ b/prevencion/prevencion.css
@@ -19,8 +19,8 @@
 }
 
 .row p {
-  padding: 0px 20px;
   line-height: 30px;
+  padding: 0px 20px;
 }
 
 .col {
@@ -40,16 +40,33 @@
 .cols-11 { width: 91.67%; }
 .cols-12 { width: 100%; }
 
-#transmision-01 {
-  max-width: 400px;
-}
-
-#transmision-02 {
-  max-width: 400px;
-}
-
-#transmision-03 {
+#prevencion-01 {
   border: solid 1px black;
+  padding: 0px 0px;
+  width: 70%;
+  max-width: 755px;
+}
+
+#prevencion-02 {
+  width: 80%;
+  max-width: 300px;
+}
+
+#prevencion-03 {
+  border: solid 1px black;
+  border-radius: 0;
+  padding: 0px 0px;
+  width: 50%;
+  max-width: 567px;
+}
+
+#prevencion-04 {
+  max-width: 405px;
+}
+
+#prevencion-05 {
+  width: 66%;
+  max-width: 600px;
 }
 
 .center {
@@ -60,6 +77,34 @@
   font-size: 0.8em;
 }
 
+.fa {
+  font-size: 12px;
+  color: goldenrod;
+  margin-right: 5px;
+}
+
+.list-group {
+  display:-ms-flexbox;
+  display:flex;
+  -ms-flex-direction:column;
+  flex-direction:column;
+  padding-left:0;
+  margin-bottom:0;
+  border-radius:.25rem
+}
+
+.list-group-item {
+  position:relative;
+  display:block;
+  padding:.75rem 1.25rem;
+  background-color:#fff;
+  border:1px solid rgba(0,0,0,.125)
+}
+
+.list-group-item-dark {
+  color:#1b1e21;
+  background-color:#c6c8ca
+}
 
 /* media queries */
 @media (max-width: 800px) {
