--- a/home/index.css
+++ b/home/index.css
@@ -1,9 +1,9 @@
 /* showcase */
 .showcase {
-  width: 100%;
-  height: 500px;
+  /*border: 1px solid var(--text-primary-color);*/
   background: var(--bg-secondary-color);
   background: url("../resources/img/showcase.jpg") no-repeat center center/cover;
+  color: var(--text-secondary-color);
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -11,8 +11,8 @@
   justify-content: flex-end;
   padding: 0px 30px 30px 30px;
   margin-bottom: 20px;
-  color: var(--text-secondary-color);
-  border: 1px solid var(--text-primary-color);
+  height: 500px;
+  width: 100%;
 }
 
 .showcase h2,
