--- a/transmision/transmision.css
+++ b/transmision/transmision.css
@@ -27,18 +27,18 @@
   margin: 20px 0px;
 }
 
-.cols-1 { width: 8.33%; }
-.cols-2 { width: 16.67%; }
-.cols-3 { width: 25.00%; }
-.cols-4 { width: 33.33%; }
-.cols-5 { width: 41.66%; }
-.cols-6 { width: 50.00%; }
-.cols-7 { width: 58.33%; }
-.cols-8 { width: 66.67%; }
-.cols-9 { width: 75.00%; }
-.cols-10 { width: 83.33%; }
-.cols-11 { width: 91.67%; }
-.cols-12 { width: 100%; }
+.cols-1 { width: calc(100% / 12 * 1); } /* 8.33%; */
+.cols-2 { width: calc(100% / 12 * 2); } /* 16.67%; */
+.cols-3 { width: calc(100% / 12 * 3); } /* 25.00%; */
+.cols-4 { width: calc(100% / 12 * 4); } /* 33.33%; */
+.cols-5 { width: calc(100% / 12 * 5); } /* 41.66%; */
+.cols-6 { width: calc(100% / 12 * 6); } /* 50.00%; */
+.cols-7 { width: calc(100% / 12 * 7); } /* 58.33%; */
+.cols-8 { width: calc(100% / 12 * 8); } /* 66.67%; */
+.cols-9 { width: calc(100% / 12 * 9); } /* 75.00%; */
+.cols-10 { width: calc(100% / 12 * 10); } /* 83.33%; */
+.cols-11 { width: calc(100% / 12 * 11); } /* 91.67%; */
+.cols-12 { width: calc(100% / 12 * 12); } /* 100%; */
 
 /* images */
 #mosquito-01 {
